fix: change styles for better visibility on small devices

--- a/client/src/components/parts/Navbar/Navbar.css
+++ b/client/src/components/parts/Navbar/Navbar.css
@@ -2,6 +2,7 @@
 .navigation {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .nav {
