--- a/client/src/components/ui/Button/Button.scss
+++ b/client/src/components/ui/Button/Button.scss
@@ -5,8 +5,8 @@
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
-  padding: 10px 30px;
-  margin: 15px 0;
+  padding: 10px 20px;
+  margin: 10px 0;
   cursor: pointer;
   &-login {
     border: 2px solid #308594;
